--- a/LED_Tetris/LED_Tetris.ioc
+++ b/LED_Tetris/LED_Tetris.ioc
@@ -28,9 +28,10 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IPNb=9
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -47,8 +48,9 @@ Mcu.Pin18=PE0
 Mcu.Pin19=PE1
 Mcu.Pin2=PE4
 Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 Mcu.Pin5=PH0-OSC_IN
@@ -56,7 +58,7 @@ Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -71,6 +73,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -147,7 +150,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -196,14 +199,19 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM2.IPParameters=Period,Prescaler
+TIM2.Period=999
+TIM2.Prescaler=209
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=99
 TIM3.Prescaler=104
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=9999
-TIM4.Prescaler=8399
+TIM4.Prescaler=839
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
