--- a/LED_Tetris/LED_Tetris.ioc
+++ b/LED_Tetris/LED_Tetris.ioc
@@ -39,18 +39,19 @@ Mcu.Pin1=PE3
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
 Mcu.Pin12=PA7
-Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PE0
-Mcu.Pin19=PE1
+Mcu.Pin13=PC5
+Mcu.Pin14=PB10
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PE0
 Mcu.Pin2=PE4
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PE1
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 Mcu.Pin5=PH0-OSC_IN
@@ -58,7 +59,7 @@ Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -71,6 +72,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -97,6 +99,8 @@ PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
