--- a/LED_Tetris/LED_Tetris.ioc
+++ b/LED_Tetris/LED_Tetris.ioc
@@ -26,40 +26,36 @@ Mcu.IP1=DAC
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=10
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA7
-Mcu.Pin13=PC5
-Mcu.Pin14=PB10
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PE0
+Mcu.Pin10=PA7
+Mcu.Pin11=PC5
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PE0
+Mcu.Pin17=PE1
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PE4
-Mcu.Pin20=PE1
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA1
-Mcu.PinsNb=25
+Mcu.Pin7=PA1
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -85,8 +81,6 @@ PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
@@ -95,10 +89,6 @@ PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
-PC3.Mode=Full_Duplex_Master
-PC3.Signal=SPI2_MOSI
 PC5.Locked=true
 PC5.Signal=GPIO_Output
 PCC.Checker=false
@@ -154,7 +144,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -198,12 +188,6 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI2.CalculateBaudRate=1.3125 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
 TIM2.IPParameters=Period,Prescaler
 TIM2.Period=999
 TIM2.Prescaler=209
